<resources>
    <string name="app_name">Quick Wash</string>
    <string name="user">user</string>
    <string name="admin">admin</string>
    <string name="title_activity_side_menu">side_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Profile</string>

    <string name="menu_order">Add Orders</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Add a Payement Info</string>
    <string name="menu_slideshow">Contact</string>
    <string name="menu_logout">Logout</string>

    <string-array name="garment_type_DC">
        <item>Shirt - $4.59</item>
        <item>Trouser - $4.59</item>
        <item>Short - $4.39</item>
        <item>Skirt - $5.39</item>
        <item>Sweater - $6.99</item>
        <item>Suit 2pc - $10.59</item>
        <item>Suit 3pc - $12.59</item>
    </string-array>


    <string-array name="garment_type_Laundry">
        <item>Shirt - $2.49</item>
        <item>Trouser - $4.59</item>
        <item>Short - $4.69</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>