<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quickwash.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.quickwash.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.quickwash.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/nav_order"
        android:name="com.example.quickwash.ui.order.StartOrderActivity"
        android:label="Order"
        tools:layout="@layout/activity_start_order" />
    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.quickwash.ui.checkOrder.checkOrderFragment"
        android:label="Status"
        tools:layout="@layout/fragment_check_order" />
    <fragment
        android:id="@+id/nav_check_history"
        android:name="com.example.quickwash.ui.history.historyFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />
</navigation>